Fixes bug where eror messages were not visible in new graphs modal menu.

--- a/src/app/vis/menucomponents/menucomponents.less
+++ b/src/app/vis/menucomponents/menucomponents.less
@@ -36,7 +36,6 @@
 .new-graph-menu {
   height: 100%;
   > div {
-    height: 100%;
     display: flex;
     flex-direction: column;
   }
